# feincms3-sites

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  biome.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
feincms3_sites/: __init__.py  admin.py  apps.py  fields.py  middleware.py  models.py  utils.py
feincms3_sites/locale/de/LC_MESSAGES/: django.mo  django.po
feincms3_sites/migrations/: 0001_initial.py  0002_site_is_managed_re.py  0003_site_default_language.py  0004_site_is_active.py  0005_site_language_codes.py
tests/: conftest.py  test_meta.py
tests/testapp/: admin.py  articles_urls.py  middleware.py  models.py  settings.py  test_feincms3.py  urls.py  views.py
tests/testapp/migrations/: 0001_initial.py  0002_customsite.py  0003_article_site_alter_customsite_default_language_and_more.py
tests/testapp/templates/: base.html
tests/testapp/templatetags/: menus.py
